[package]
name = "urbit-ob"
version = "0.2.0"
edition = "2021"
description = "Utilities for formatting and parsing Urbit's @p and @q data types (patp/patq)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/urbitme/urbit-ob-rs"
authors = ["~nodreb-borrus <nodreb@borr.us>"]
documentation = "https://docs.rs/urbit-ob"
keywords = ["urbit"]

[dependencies]
ibig = { version = "0.3.6", default-features = false, features = ["std", "num-traits"] }
murmur3 = "0.5.2"
num-traits = "0.2.17"
once_cell = "1.18.0"
thiserror = "1.0.50"
